--- a/components/Navigation.module.css
+++ b/components/Navigation.module.css
@@ -1,10 +1,30 @@
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .nav{
     display: flex;
     flex-direction: column;
+    padding-top:1rem;
     gap: 1.5rem;
     width: 64px;
-    height: 100vh;
-    background-color: rgb(148, 172, 240);
+    height: 100%;
+    border-radius: 10px;
+    background-color: rgba(211, 233, 252, 0.966);
+        
+}
+.navopen {
+    display: flex;
+    flex-direction: column;
+    padding-top: 1rem;
+    gap: 1.5rem;
+    width: 50%;
+    height: 100%;
+    border-radius: 10px;
+    background-color: rgba(211, 233, 252, 0.966);
+
 }
 
 .link {
@@ -15,8 +35,19 @@
     align-items: center;
     text-align: center;
     gap: 0.5rem;
+    cursor: pointer;
 }
 
+.link:hover{
+    color:rgb(87, 131, 253);
+    /* background-color: rgb(87, 131, 253); */
+
+}
+.link.active{
+    color: rgb(87, 131, 253);
+    font-weight: bold;
+}
 .span{
     font-size: small;
 }
+
