--- a/pages/map.module.css
+++ b/pages/map.module.css
@@ -2,8 +2,15 @@
     display: flex;
     width: 100%;
     height: 100vh;
+    /* position: relative; */
 }
 
+.map{
+   flex: 1;
+   height: 100%;
+}
+
+/* 
 .map{
     position: absolute;
     tap: 0;
@@ -11,4 +18,74 @@
     width: 100%;
     height: 100%;
     
+} */
+
+.sidePanelContainer{
+    position: relative;
+    display: flex;
+    height: 100%;
+}
+.sidePanel{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 100%;
+    background-color: #fff;
+    transition: transform 0.3s ease;
+}
+
+.sidePanelClosed{
+    display: none;
+}
+
+.panelOpenBtn {
+    position: absolute;
+    right: -25px;    
+    top: 50%;
+    transform: translateY(-50%);
+    width: 25px;
+    height: 70px;
+    background-image: url('../public/lessthan.svg');
+    background-size: conver;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-right: 2px solid rgb(163, 163, 163);
+    border-top: 2px solid rgb(163, 163, 163);
+    border-bottom: 2px solid rgb(163, 163, 163);
+    border-left: none;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    cursor: pointer;
+}
+
+.panelCloseBtn {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 25px;
+    height: 70px;
+    background-image: url('../public/greaterthan.svg');
+    background-size: conver;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-right: 2px solid rgb(163, 163, 163);
+    border-top: 2px solid rgb(163, 163, 163);
+    border-bottom: 2px solid rgb(163, 163, 163);
+    border-left: none;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    cursor: pointer;
+}
+
+/* 지도 확대축소버튼 */
+.buttonContainer {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    width: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    z-index: 1000;
 }
