--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,10 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
 }
 
 body {
@@ -22,6 +26,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body > div#__next {
+  height: 100%;
 }
 
 * {
@@ -40,3 +48,14 @@ a {
     color-scheme: dark;
   }
 } */
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
+body>div#__next {
+  height: 100%;
+}
