--- a/components/Search.module.css
+++ b/components/Search.module.css
@@ -41,3 +41,13 @@
 .clearButton:hover {
     color: #333;
 }
+
+.searchError {
+    color: #666;
+    text-align: center;
+    padding: 10px;
+    margin-top: 10px;
+    background-color: #f8f8f8;
+    border-radius: 4px;
+    font-size: 14px;
+}
